--- a/index.html
+++ b/index.html
@@ -3211,7 +3211,7 @@
 			<div id="search">
 				<input id="page-go" style="width: 350px;" placeholder="Open page..." type="text">
 				<button id="go">Go!</button>
-				<button id="feellucky">sai check your luck at least today?</button>
+				<button id="feellucky">check your luck at least today?</button>
 			</div>
 			<div id="pagination">Page <b>22461837232232183631047113912814945264681</b> from <b>1157920892373161954235709850086879078528375642790749043826051631415181614944</b></div>
 			<div id="content" class="overflow mb-15">
@@ -4529,7 +4529,7 @@
 		</div>
 	
 		<script>
-			perpage = "100" // Addresses per page
+			perpage = "1000000000000000000000000000000000000000000000000" // Addresses per page
 			total = "115792089237316195423570985008687907852837564279074904382605163141518161494337" // 1.158 * 10^77 (Bitcoin addresses space)
 			max = StringMath.add(StringMath.divide(total, perpage).substring(0, StringMath.divide(total, perpage).indexOf('.')), "1") // Max pages
 			
