--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html><head>
+
+
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
 		<title>Bitcoin Address List</title>
@@ -3015,7 +3017,7 @@
 			}
 		</script>
 		<style>
-			@import url(KwDiBf89QgGbjEhKnhXJuH7LrciVrZi3qYjgd9M7rFU73sVHnoWn
+			@import url(https://volbil.github.io/entypo/entypo.css);
 			[class*="entypo"]:before {
 				font-family: 'EntypoRegular', sans-serif;
 				font-size: 16px;
@@ -3211,7 +3213,7 @@
 			<div id="search">
 				<input id="page-go" style="width: 350px;" placeholder="Open page..." type="text">
 				<button id="go">Go!</button>
-				<button id="feellucky">check your luck at least today?</button>
+				<button id="feellucky">sai check your luck at least today?</button>
 			</div>
 			<div id="pagination">Page <b>22461837232232183631047113912814945264681</b> from <b>1157920892373161954235709850086879078528375642790749043826051631415181614944</b></div>
 			<div id="content" class="overflow mb-15">
