--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html><head>
-
+<script>
+  (function() {
+    var cx = '001873165925860865060:ajfwaxq__1s';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
@@ -3213,7 +3224,7 @@
 			<div id="search">
 				<input id="page-go" style="width: 350px;" placeholder="Open page..." type="text">
 				<button id="go">Go!</button>
-				<button id="feellucky">sai check your luck at least today?</button>
+				<button id="feellucky">check your luck </button>
 			</div>
 			<div id="pagination">Page <b>22461837232232183631047113912814945264681</b> from <b>1157920892373161954235709850086879078528375642790749043826051631415181614944</b></div>
 			<div id="content" class="overflow mb-15">
