--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <html><head>
-<script>
-  (function() {
-    var cx = '001873165925860865060:ajfwaxq__1s';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
+<form action="//www.findberry.com/search/" method="get" id="sr_newpage">
+  <input type="hidden" name="wid" value="11480" />
+  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
+  <input id="sr_searchbutton" type="submit" value="Search" /><br />
+  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
+  Site search by Findberry</a>
+</form>
+
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
