--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+    <form action="//www.findberry.com/search/" method="get" id="sr_newpage">
+  <input type="hidden" name="wid" value="11479" />
+  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
+  <input id="sr_searchbutton" type="submit" value="Search" /><br />
+  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
+  Site search by Findberry</a>
+</form>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Database - Bitcoin Private Keys</title>
     <meta name="description" content="Full list of all possible ECDSA Bitcoin Keys in decimal, hex or WIF format">
