--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html><head>
-<form action="//www.findberry.com/search/" method="get" id="sr_newpage">
-  <input type="hidden" name="wid" value="11480" />
-  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
-  <input id="sr_searchbutton" type="submit" value="Search" /><br />
-  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
-  Site search by Findberry</a>
-</form>
+<script type="text/javascript">
+   /* Create a configuration object */
+   var ss360Config = {
+      /* Your site id */
+      siteId: 'gsngsn123.github.io',
+      /* A CSS selector that points to your search  box */
+      searchBox: {selector: '#searchBox'}
+   };
+</script>
+<script type="module" src="https://cdn.sitesearch360.com/sitesearch360-v12.mjs"></script>
+<script nomodule src="https://cdn.sitesearch360.com/sitesearch360-v12.min.js" async></script>
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
