--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </script>
 <script type="module" src="https://cdn.sitesearch360.com/sitesearch360-v12.mjs"></script>
 <script nomodule src="https://cdn.sitesearch360.com/sitesearch360-v12.min.js" async></script>
+	<input id="searchBox" type="text" placeholder="search" />
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
