--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <html><head>
-<form action="//www.findberry.com/search/" method="get" id="sr_newpage">
-  <input type="hidden" name="wid" value="11480" />
-  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
-  <input id="sr_searchbutton" type="submit" value="Search" /><br />
-  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
-  Site search by Findberry</a>
-</form>
-
+<script>
+  (function() {
+    var id = 'e7ea630a-0f2f-11e9-a97a-0242ac130002';
+    var ci_search = document.createElement('script');
+    ci_search.type = 'text/javascript';
+    ci_search.async = true;
+    ci_search.src = 'https://cse.expertrec.com/api/js/ci_common.js?id=' + id;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(ci_search, s);
+  })();
+</script>
+	<ci-search></ci-search>
+	
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
