--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html><head>
-<form action="//www.findberry.com/search/" method="get" id="sr_newpage">
-  <input type="hidden" name="wid" value="11480" />
-  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
-  <input id="sr_searchbutton" type="submit" value="Search" /><br />
-  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
-  Site search by Findberry</a>
-</form>
+<script>
+  (function() {
+    var cx = '002831055840997170740:ldxopyypyi0';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
