--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   })();
 </script>
 <gcse:search></gcse:search>
+	google-site-verification: google9a0b35d3d5844739.html
+	
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
