--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   })();
 </script>
 <gcse:search></gcse:search>
-	google-site-verification: google9a0b35d3d5844739.html
+	<meta name="google-site-verification" content="Nsv8IU2mCVTZSmQ44Lc6R1lFyloqDbR1sO4_SGVBZSA" />
 	
 
 
