--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <script>
   (function() {
-    var cx = '002831055840997170740:ldxopyypyi0';
+    var cx = '001873165925860865060:kuvybe9ni-e';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
@@ -11,8 +11,6 @@
   })();
 </script>
 <gcse:search></gcse:search>
-	<meta name="google-site-verification" content="Nsv8IU2mCVTZSmQ44Lc6R1lFyloqDbR1sO4_SGVBZSA" />
-	
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
