--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </script>
 <gcse:search></gcse:search>
 	
+	<script type="text/javascript">
+  (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+  (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+  e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+  })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+  
+  _st('install','nYx2mHz4fArzbmx2yVCo','2.0.0');
+</script>
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
