--- a/index.html
+++ b/index.html
@@ -48,7 +48,19 @@
   })();
 </script>
 <gcse:search></gcse:search>
-
+	
+<script>
+  (function() {
+    var cx = '002831055840997170740:wy3rfqnc-hw';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
