--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <title>Bitcoin Private Keys Database with Balance</title>
     <meta name="description" content="Explore all possible Bitcoin Keys in decimal, hex or WIF format">
     <meta name="keywords" content="bitcoin private keys database list directory">
+    <script>
+  (function() {
+    var cx = '002831055840997170740:wy3rfqnc-hw';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
