--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <!-- start of freefind search box html -->
 <table cellpadding=0 cellspacing=0 border=0 >
 <tr>
-	<td  colspan=2 style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;">
+	<td  style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;">
+		<center><table width="90%" cellpadding=0 cellspacing=0 border=0  style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;" >
+		<tr>
+			<td style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;" align=left ><a href="https://search.freefind.com/siteindex.html?si=67083760">index</a></td>
+			<td style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;" align=center><a href="https://search.freefind.com/find.html?si=67083760&amp;m=0&amp;p=0">sitemap</a></td>
+			<td style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;" align=right><a href="https://search.freefind.com/find.html?si=67083760&amp;pid=a">advanced</a></td>
+		</tr>
+		</table></center>
 		<form style="margin:0px; margin-top:4px;" action="https://search.freefind.com/find.html" method="get" accept-charset="utf-8" target="_self">
 		<input type="hidden" name="si" value="67083760">
 		<input type="hidden" name="pid" value="r">
@@ -15,17 +22,13 @@
 	</td>
 </tr>
 <tr>
-	<td style="text-align:left; font-family: Arial, Helvetica, sans-serif;	font-size: 7.5pt; padding-top:4px;">
-		<a style="text-decoration:none; color:gray;" href="https://www.freefind.com" rel="nofollow" >search engine</a><a style="text-decoration:none; color:gray;" href="https://www.freefind.com"  rel="nofollow"> by
+	<td style="text-align:center; font-family: Arial, Helvetica, sans-serif;	font-size: 7.5pt; padding-top:4px;">
+		<a style="text-decoration:none; color:gray;" href="https://www.freefind.com" rel="nofollow" >site search</a><a style="text-decoration:none; color:gray;" href="https://www.freefind.com"  rel="nofollow"> by
 		<span style="color: #606060;">freefind</span></a>
-	</td>	
-	<td style="text-align:right; font-family: Arial, Helvetica, sans-serif;	font-size: 7.5pt; padding-top:4px;">
-		<a href="https://search.freefind.com/find.html?si=67083760&amp;pid=a">advanced</a>
 	</td>
 </tr>
 </table>
 <!-- end of freefind search box html -->
-
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
