--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <html><head>
-<form action="//www.findberry.com/search/" method="get" id="sr_newpage">
-  <input type="hidden" name="wid" value="11480" />
-  <input id="sr_searchbox" type="text" name="query" value="" size="35" />
-  <input id="sr_searchbutton" type="submit" value="Search" /><br />
-  <a href="http://www.findberry.com" target="_blank" style="line-height: 1.7">
-  Site search by Findberry</a>
-</form>
-
+<!-- start of freefind search box html -->
+<table cellpadding=0 cellspacing=0 border=0 >
+<tr>
+	<td  colspan=2 style="font-family: Arial, Helvetica, sans-serif; font-size: 7.5pt;">
+		<form style="margin:0px; margin-top:4px;" action="https://search.freefind.com/find.html" method="get" accept-charset="utf-8" target="_self">
+		<input type="hidden" name="si" value="97385415">
+		<input type="hidden" name="pid" value="r">
+		<input type="hidden" name="n" value="0">
+		<input type="hidden" name="_charset_" value="">
+		<input type="hidden" name="bcd" value="&#247;">
+		<input type="text" name="query" size="15"> 
+		<input type="submit" value="search">
+		</form>
+	</td>
+</tr>
+<tr>
+	<td style="text-align:left; font-family: Arial, Helvetica, sans-serif;	font-size: 7.5pt; padding-top:4px;">
+		<a style="text-decoration:none; color:gray;" href="https://www.freefind.com" rel="nofollow" >search engine</a><a style="text-decoration:none; color:gray;" href="https://www.freefind.com"  rel="nofollow"> by
+		<span style="color: #606060;">freefind</span></a>
+	</td>	
+	<td style="text-align:right; font-family: Arial, Helvetica, sans-serif;	font-size: 7.5pt; padding-top:4px;">
+		<a href="https://search.freefind.com/find.html?si=97385415&amp;pid=a">advanced</a>
+	</td>
+</tr>
+</table>
+<!-- end of freefind search box html -->
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
